force-app/main/default/objects/Certificate_Notification_Setting__c/Certificate_Notification_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Certificate Notification Setting</label>
</CustomObject>