force-app/main/default/objects/Certificate_Notification_Setting__c/fields/Certificate_Expiring_Nearby__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Expiring_Nearby__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Expiring Nearby</label>
    <type>Checkbox</type>
</CustomField>