force-app/main/default/objects/Certificate_Notification_Setting__c/fields/Enable_Certificate_Notification__c.field-meta.xml
<CustomField>
    <fullName>Enable_Certificate_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Certificate Notification</label>
    <type>Checkbox</type>
</CustomField>