force-app/main/default/objects/Certificate_Notification_Setting__c/fields/First_Notification__c.field-meta.xml
<CustomField>
    <fullName>First_Notification__c</fullName>
    <defaultValue>30</defaultValue>
    <label>First Notification</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>