force-app/main/default/objects/Certificate_Notification_Setting__c/fields/Last_Notification__c.field-meta.xml
<CustomField>
    <fullName>Last_Notification__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Last Notification</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>