force-app/main/default/objects/Certificate_Notification_Setting__c/fields/Second_Notification__c.field-meta.xml
<CustomField>
    <fullName>Second_Notification__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Second Notification</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>