force-app/main/default/objects/Certificate_Notification_Setting__c/fields/Third_Notification__c.field-meta.xml
<CustomField>
    <fullName>Third_Notification__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Third Notification</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>