force-app/main/default/objects/Certificate_Notification_Setting__c/fields/Weekly_Day__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Day__c</fullName>
    <label>Weekly Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>